# Generalized-programming

cow-string/: CMakeLists.txt  cow_string.cpp  cow_string.h
cow-string/tests/: tests.cpp
